[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tokens/Units/TokenScript.gd" type="Script" id=1]
[ext_resource path="res://Tokens/TokenImage/battle-tank.png" type="Texture" id=2]
[ext_resource path="res://Tokens/Units/Idle.gd" type="Script" id=3]
[ext_resource path="res://Tokens/Units/Move.gd" type="Script" id=4]
[ext_resource path="res://Tokens/Units/Attack.gd" type="Script" id=5]
[ext_resource path="res://Tokens/Units/MoveAttack.gd" type="Script" id=6]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/icon_background.png-d0bd0bd62b4df13bea67deb11e2b0018.stex"

[node name="UnitToken" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="PathPoints" type="Line2D" parent="."]
z_index = 70
width = 20.0
default_color = Color( 0.176471, 0.811765, 0.709804, 0.623529 )
joint_mode = 1

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -77, 69, -39, 70, 38, 0, 77, -69, 39, -70, -38 )
disabled = true

[node name="HexagonalBG" type="Sprite" parent="."]
z_index = 50
texture = SubResource( 1 )

[node name="UnitIcon" type="Sprite" parent="HexagonalBG"]
position = Vector2( -2, -2 )
scale = Vector2( 0.234375, 0.234375 )
texture = ExtResource( 2 )

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 10.0
avoidance_enabled = true

[node name="States" type="Node2D" parent="."]

[node name="Idle" type="Node2D" parent="States"]
script = ExtResource( 3 )

[node name="Move" type="Node2D" parent="States"]
script = ExtResource( 4 )

[node name="Attack" type="Node2D" parent="States"]
script = ExtResource( 5 )

[node name="MoveAttack" type="Node2D" parent="States"]
script = ExtResource( 6 )

[connection signal="target_reached" from="NavigationAgent" to="." method="_on_NavigationAgent_target_reached"]
